crates/math-core/tests/snapshots/conversion_test__textit_and_textbf.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\textit{a\\textbf{b}}, \\textbf{c\\textit{d}}"
---
<math>
    <mrow>
        <mtext><i>a</i></mtext>
        <mtext><b><i>b</i></b></mtext>
    </mrow>
    <mo>,</mo>
    <mrow>
        <mtext><b>c</b></mtext>
        <mtext><b><i>d</i></b></mtext>
    </mrow>
</math>
