crates/math-core/tests/snapshots/conversion_test__texttt.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\texttt{x}"
---
<math>
    <mtext><code>x</code></mtext>
</math>
