crates/math-core/tests/snapshots/conversion_test__transform_group.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathit{a{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mrow><mspace/><mi>𝑏𝑐</mi></mrow>
        <mi>𝑑</mi>
    </mrow>
</math>
