crates/math-core/tests/snapshots/conversion_test__undefined_label.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\eqref{a}"
---
<math>
    <mtext><a href="#a">(??)</a></mtext>
</math>
