crates/math-core/tests/snapshots/conversion_test__underbar.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\underbar{AB}"
---
<math>
    <mtext><u>AB</u></mtext>
</math>
