crates/math-core/tests/snapshots/conversion_test__underleftrightarrow.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\underleftrightarrow{a+b+c}_{d}"
---
<math>
    <msub>
        <munder accentunder="true">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mi>c</mi>
            </mrow>
            <mo>↔</mo>
        </munder>
        <mi>d</mi>
    </msub>
</math>
